--- a/.github/workflows/deploy-to-minikube-github-action.yaml
+++ b/.github/workflows/deploy-to-minikube-github-action.yaml
@@ -22,6 +22,8 @@ jobs:
     - name: Deploy to minikube
       run:
         kubectl apply -f k8s-node-app.yaml
+    - name: Wait for Deployment
+      run: kubectl rollout status deployment/nodejs-app
     - name: Test service URLs
       run: |
           minikube service list
